working on paginating through pages of links to scrape

--- a/notebooks/beer_adv_webscrape.ipynb
+++ b/notebooks/beer_adv_webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d437819",
+   "id": "99013284",
    "metadata": {},
    "source": [
     "#### Goal for this webscrape phase: \"go into\" a page with links to \"zoom in\"/loop through links that then take you to another level that will then loop through links to scrape each webpage with in\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad08451c",
+   "id": "468a7419",
    "metadata": {},
    "source": [
     "###### zooming out one level to scrape through \"bocks\" pg 1 with 50 results"
@@ -434,6 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# youtube page: John Watson Rooney helped get more of the wabscraping process \n",
     "root='https://www.beeradvocate.com'\n",
     "header= {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36'} \n",
     "website=f'{root}/beer/styles/32/?sort=revsD&start=0'\n",
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "038527e7",
+   "id": "aec0bfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,27 +456,18 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "73a3df5a",
+   "id": "a7c7861e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table=soup.find('table')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78218c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup.find_all('a',href=True)"
+    "table=soup.find('table')\n",
+    "#table is where the links are concentrated in "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7d500bc5",
+   "id": "44f53337",
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9795d875",
+   "id": "8c2eb211",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f4acd48b",
+   "id": "46c66d0f",
    "metadata": {
     "scrolled": true
    },
@@ -583,8 +575,10 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7beca3ee",
-   "metadata": {},
+   "id": "9845431b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -651,109 +645,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9405dd3",
+   "metadata": {},
+   "source": [
+    "##### Need to loop through pages now, as the above only has info for one page which contains 50 links \n",
+    "-bock category has around 35 pages\n",
+    "-/?sort=revsD&start=1700 (last page of bocks)\n",
+    "-/?sort=revsD&start=0 (first page of bocks)\n",
+    "\n",
+    "the number at the end is the only change, however each style has a different number of results and 1700 will not be consistent\n",
+    "\n",
+    "maybe there is a way to count down and some how have that be the range when paginating through pages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "da618349",
+   "id": "30760bc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# testlink='https://www.beeradvocate.com/beer/profile/143/1352/'\n",
+    "\n",
+    "\n",
     "beerlist=[]\n",
-    "for x in range()    \n",
+    "for x in range(0,)    \n",
     "    root='https://www.beeradvocate.com'\n",
     "    header= {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36'} \n",
-    "    website=f'{root}/beer/styles/32/?sort=revsD&start=0'\n",
+    "    website=f'{root}/beer/styles/32/?sort=revsD&start={x}'\n",
     "    scraper = cloudscraper.create_scraper() \n",
     "    info = scraper.get(website)     \n",
-    "       \n",
-    "    for link in beerlinks:\n",
-    "        r=requests.get(link, headers=header)\n",
-    "        soup=BeautifulSoup(r.content,'lxml')\n",
-    "        try:\n",
-    "            name=soup.h1.find(string=True)\n",
-    "        except:\n",
-    "            name= 'Na'\n",
-    "        try:    \n",
-    "            brewery=soup.find_all('a',attrs={'class':'Tooltip'})[4].text\n",
-    "        except:\n",
-    "            brewery= 'Na'\n",
-    "        try:\n",
-    "            location=soup.find_all('dd', attrs={'class':'beerstats'})[1].a.text\n",
-    "        except:\n",
-    "            location= 'Na'\n",
-    "        try:\n",
-    "            location2=soup.find_all('dd', attrs={'class':'beerstats'})[1].find_all('a')[1].text\n",
-    "        except:\n",
-    "            location2= 'Na'\n",
-    "        try:\n",
-    "            style=soup.find_all('a',attrs={'class':'Tooltip'})[5].text\n",
-    "        except:\n",
-    "            style= 'Na'\n",
-    "        try:\n",
-    "            ba_score=soup.find_all('span',attrs={'class':'Tooltip'})[5].text\n",
-    "        except:\n",
-    "            ba_score= 'Na'\n",
-    "        try:\n",
-    "            over_all_rank=soup.find_all('a',attrs={'class':'Tooltip'})[7].text\n",
-    "        except:\n",
-    "            over_all_rank= 'Na'\n",
-    "        try:\n",
-    "            style_rank=soup.find_all('a',attrs={'class':'Tooltip'})[6].text\n",
-    "        except:\n",
-    "            style_rank= 'Na'\n",
-    "        try:\n",
-    "            alcohol_percent=soup.find_all('span',attrs={'class':'Tooltip'})[3].text\n",
-    "        except:\n",
-    "            alcohol_percent= 'Na'\n",
-    "        try:\n",
-    "            avg_rating=soup.find_all('span',attrs={'class':'Tooltip'})[7].text\n",
-    "        except:\n",
-    "            avg_rating= 'Na'\n",
-    "        try:\n",
-    "            percent_dev=soup.find_all('span',attrs={'class':'Tooltip'})[8].text\n",
-    "        except:\n",
-    "            percent_dev= 'Na'\n",
-    "        try:\n",
-    "            review_count=soup.find_all('span',attrs={'class':'Tooltip'})[10].text\n",
-    "        except:\n",
-    "            review_count= 'Na'\n",
-    "        try:\n",
-    "            rating_count=soup.find_all('span',attrs={'class':'Tooltip'})[12].text\n",
-    "        except:\n",
-    "            rating_count= 'Na'\n",
-    "        try:\n",
-    "            status=soup.find_all('span',attrs={'class':'Tooltip'})[14].text\n",
-    "        except:\n",
-    "            status= 'Na'\n",
-    "        try:\n",
-    "            date_added=soup.find_all('span',attrs={'class':'Tooltip'})[18].text\n",
-    "        except:\n",
-    "            date_added= 'Na'\n",
-    "        beer_info= {\n",
-    "            'name': name,\n",
-    "            'brewery': brewery,\n",
-    "            'location':location,\n",
-    "            'location2':location2,\n",
-    "            'style': style,\n",
-    "            'ba_score':ba_score,\n",
-    "            'over_all_rank': over_all_rank,\n",
-    "            'style_rank': style_rank,\n",
-    "            'alcohol_percent': alcohol_percent,\n",
-    "            'avg_rating':avg_rating,\n",
-    "            'percent_dev': percent_dev,\n",
-    "            'review_count': review_count,\n",
-    "            'rating_count':rating_count,\n",
-    "            'status': status,\n",
-    "            'date_added': date_added\n",
-    "            }\n",
-    "        time.sleep(3)\n",
-    "        beerlist.append(beer_info)"
+    "    soup = BeautifulSoup(info.text, 'lxml')\n",
+    "    table=soup.find('table')\n",
+    "    \n",
+    "    beerlinks=[]\n",
+    "    for link in table.find_all(\"a\", href=re.compile(\"profile\"))[::2]:\n",
+    "        beerlinks.append(root + link['href'])\n",
+    "    \n",
+    "    \n",
+    "        for link in beerlinks:\n",
+    "            r=requests.get(link, headers=header)\n",
+    "            soup=BeautifulSoup(r.content,'lxml')\n",
+    "            try:\n",
+    "                name=soup.h1.find(string=True)\n",
+    "            except:\n",
+    "                name= 'Na'\n",
+    "            try:    \n",
+    "                brewery=soup.find_all('a',attrs={'class':'Tooltip'})[4].text\n",
+    "            except:\n",
+    "                brewery= 'Na'\n",
+    "            try:\n",
+    "                location=soup.find_all('dd', attrs={'class':'beerstats'})[1].a.text\n",
+    "            except:\n",
+    "                location= 'Na'\n",
+    "            try:\n",
+    "                location2=soup.find_all('dd', attrs={'class':'beerstats'})[1].find_all('a')[1].text\n",
+    "            except:\n",
+    "                location2= 'Na'\n",
+    "            try:\n",
+    "                style=soup.find_all('a',attrs={'class':'Tooltip'})[5].text\n",
+    "            except:\n",
+    "                style= 'Na'\n",
+    "            try:\n",
+    "                ba_score=soup.find_all('span',attrs={'class':'Tooltip'})[5].text\n",
+    "            except:\n",
+    "                ba_score= 'Na'\n",
+    "            try:\n",
+    "                over_all_rank=soup.find_all('a',attrs={'class':'Tooltip'})[7].text\n",
+    "            except:\n",
+    "                over_all_rank= 'Na'\n",
+    "            try:\n",
+    "                style_rank=soup.find_all('a',attrs={'class':'Tooltip'})[6].text\n",
+    "            except:\n",
+    "                style_rank= 'Na'\n",
+    "            try:\n",
+    "                alcohol_percent=soup.find_all('span',attrs={'class':'Tooltip'})[3].text\n",
+    "            except:\n",
+    "                alcohol_percent= 'Na'\n",
+    "            try:\n",
+    "                avg_rating=soup.find_all('span',attrs={'class':'Tooltip'})[7].text\n",
+    "            except:\n",
+    "                avg_rating= 'Na'\n",
+    "            try:\n",
+    "                percent_dev=soup.find_all('span',attrs={'class':'Tooltip'})[8].text\n",
+    "            except:\n",
+    "                percent_dev= 'Na'\n",
+    "            try:\n",
+    "                review_count=soup.find_all('span',attrs={'class':'Tooltip'})[10].text\n",
+    "            except:\n",
+    "                review_count= 'Na'\n",
+    "            try:\n",
+    "                rating_count=soup.find_all('span',attrs={'class':'Tooltip'})[12].text\n",
+    "            except:\n",
+    "                rating_count= 'Na'\n",
+    "            try:\n",
+    "                status=soup.find_all('span',attrs={'class':'Tooltip'})[14].text\n",
+    "            except:\n",
+    "                status= 'Na'\n",
+    "            try:\n",
+    "                date_added=soup.find_all('span',attrs={'class':'Tooltip'})[18].text\n",
+    "            except:\n",
+    "                date_added= 'Na'\n",
+    "            beer_info= {\n",
+    "                'name': name,\n",
+    "                'brewery': brewery,\n",
+    "                'location':location,\n",
+    "                'location2':location2,\n",
+    "                'style': style,\n",
+    "                'ba_score':ba_score,\n",
+    "                'over_all_rank': over_all_rank,\n",
+    "                'style_rank': style_rank,\n",
+    "                'alcohol_percent': alcohol_percent,\n",
+    "                'avg_rating':avg_rating,\n",
+    "                'percent_dev': percent_dev,\n",
+    "                'review_count': review_count,\n",
+    "                'rating_count':rating_count,\n",
+    "                'status': status,\n",
+    "                'date_added': date_added\n",
+    "                }\n",
+    "            time.sleep(5)\n",
+    "            beerlist.append(beer_info)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bb4e0fbe",
+   "id": "4774af51",
    "metadata": {},
    "outputs": [
     {
@@ -765,13 +783,13 @@
     }
    ],
    "source": [
-    "print(beerlist)"
+    "# print(beerlist)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "f8c012f8",
+   "id": "f83c1d14",
    "metadata": {},
    "outputs": [
     {
@@ -949,152 +967,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09152cf0",
+   "id": "0933909d",
    "metadata": {},
-   "source": [
-    "##### Need to loop through pages now, as the above only has info for one page which contains 50 links \n",
-    "-bock category has around 35 pages\n",
-    "-/?sort=revsD&start=1700 (last page of bocks)\n",
-    "-/?sort=revsD&start=0 (first page of bocks)\n",
-    "\n",
-    "the number at the end is the only change, however each style has a different number of results and 1700 will not be consistent\n",
-    "\n",
-    "maybe there is a way to count down and some how have that be the range when paginating through pages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "e932b23a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_number=1700\n",
-    "count_down=[]\n",
-    "for i in range(test_number,-1, -50):\n",
-    "    count_down.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "ee08156a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1700,\n",
-       " 1650,\n",
-       " 1600,\n",
-       " 1550,\n",
-       " 1500,\n",
-       " 1450,\n",
-       " 1400,\n",
-       " 1350,\n",
-       " 1300,\n",
-       " 1250,\n",
-       " 1200,\n",
-       " 1150,\n",
-       " 1100,\n",
-       " 1050,\n",
-       " 1000,\n",
-       " 950,\n",
-       " 900,\n",
-       " 850,\n",
-       " 800,\n",
-       " 750,\n",
-       " 700,\n",
-       " 650,\n",
-       " 600,\n",
-       " 550,\n",
-       " 500,\n",
-       " 450,\n",
-       " 400,\n",
-       " 350,\n",
-       " 300,\n",
-       " 250,\n",
-       " 200,\n",
-       " 150,\n",
-       " 100,\n",
-       " 50,\n",
-       " 0]"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_down\n",
-    "## need to now find a way to go into 'last' to make that number the test number variable "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "d915fde3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 50,\n",
-       " 100,\n",
-       " 150,\n",
-       " 200,\n",
-       " 250,\n",
-       " 300,\n",
-       " 350,\n",
-       " 400,\n",
-       " 450,\n",
-       " 500,\n",
-       " 550,\n",
-       " 600,\n",
-       " 650,\n",
-       " 700,\n",
-       " 750,\n",
-       " 800,\n",
-       " 850,\n",
-       " 900,\n",
-       " 950,\n",
-       " 1000,\n",
-       " 1050,\n",
-       " 1100,\n",
-       " 1150,\n",
-       " 1200,\n",
-       " 1250,\n",
-       " 1300,\n",
-       " 1350,\n",
-       " 1400,\n",
-       " 1450,\n",
-       " 1500,\n",
-       " 1550,\n",
-       " 1600,\n",
-       " 1650,\n",
-       " 1700]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_number=1700\n",
-    "count_down=[]\n",
-    "for i in range(0,1701, 50):\n",
-    "    count_down.append(i)\n",
-    "    \n",
-    "count_down"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86a44c6",
+   "id": "f089585e",
    "metadata": {},
    "outputs": [],
    "source": []
