notebooks that scraped 4 pages individually to find where shift in data took place and why, notebook attemoting mass web scrape

--- a/notebooks/beer_adv_webscrape.ipynb
+++ b/notebooks/beer_adv_webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a65818de",
+   "id": "a51a71c2",
    "metadata": {},
    "source": [
     "#### Goal for this webscrape phase: \"go into\" a page with links to \"zoom in\"/loop through links that then take you to another level that will then loop through links to scrape each webpage with in\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd3fd91a",
    "metadata": {},
    "outputs": [],
@@ -39,15 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "50129b5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "# # # url = \"https://www.beeradvocate.com/beer/profile/143/1352/\" # this was first test page scraped\n",
     "# # # url =\"https://www.beeradvocate.com/beer/profile/17033/53930/\" #this one does not have ratings\n",
     "# url=\"https://www.beeradvocate.com/beer/profile/49043/469480/\" #problem page\n",
-    "# url=\"https://www.beeradvocate.com/beer/profile/50850/554909/\"\n",
+    "url=\"https://www.beeradvocate.com/beer/profile/50850/554909/\"\n",
     "user_agents_list = [\n",
     "    'Mozilla/5.0 (iPad; CPU OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148',\n",
     "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.83 Safari/537.36',\n",
@@ -149,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4127dc26",
+   "id": "9385b149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08de95bf",
+   "id": "1b68df6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f615c124",
+   "id": "291deacd",
    "metadata": {},
    "source": [
     "###### zooming out one level to scrape through \"bocks\" pg 1 with 50 results"
@@ -304,87 +312,87 @@
    "outputs": [],
    "source": [
     "# # youtube page: John Watson Rooney helped get more of the wabscraping process \n",
-    "# root='https://www.beeradvocate.com'\n",
-    "# header= {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36'} \n",
-    "# website=f'{root}/beer/styles/32/?sort=revsD&start=0'\n",
-    "# scraper = cloudscraper.create_scraper() \n",
-    "# info = scraper.get(website) \n",
-    "# print(info.status_code)\n"
+    "root='https://www.beeradvocate.com'\n",
+    "header= {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36'} \n",
+    "website=f'{root}/beer/styles/32/?sort=revsD&start=0'\n",
+    "scraper = cloudscraper.create_scraper() \n",
+    "info = scraper.get(website) \n",
+    "print(info.status_code)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00fb9125",
+   "id": "9fe83595",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# soup = BeautifulSoup(info.text, 'lxml')"
+    "soup = BeautifulSoup(info.text, 'lxml')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862023b5",
+   "id": "ba37d1fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# table=soup.find('table')\n",
+    "table=soup.find('table')\n",
     "# table is where the links are concentrated in "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c72838b",
+   "id": "351a805c",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# table.find_all(\"a\", href=re.compile(\"profile\"))[::2]"
+    "table.find_all(\"a\", href=re.compile(\"profile\"))[::2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2654506",
+   "id": "d855356e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# links=[link['href'] for link in table.find_all(\"a\", href=re.compile(\"profile\"))[::2]]\n",
-    "# print(links)"
+    "links=[link['href'] for link in table.find_all(\"a\", href=re.compile(\"profile\"))[::2]]\n",
+    "print(links)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7519ec46",
+   "id": "5ea18ce0",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# beerlinks=[]\n",
-    "# for link in table.find_all(\"a\", href=re.compile(\"profile\"))[::2]:\n",
-    "#     beerlinks.append(root + link['href'])\n"
+    "beerlinks=[]\n",
+    "for link in table.find_all(\"a\", href=re.compile(\"profile\"))[::2]:\n",
+    "    beerlinks.append(root + link['href'])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84cf9540",
+   "id": "f24acadb",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# beerlinks\n"
+    "beerlinks\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e5a72e0",
+   "id": "e8cf9999",
    "metadata": {},
    "source": [
     "##### Building together code to loop through links on one page  "
@@ -393,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e57a16d",
+   "id": "260cdf52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d018ecfa",
+   "id": "4c6260dc",
    "metadata": {
     "scrolled": false
    },
@@ -518,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d456020e",
+   "id": "0063b98e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44e8a6ff",
+   "id": "9efca6e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee8eef3",
+   "id": "b01cb585",
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7218e202",
+   "id": "7724ed4e",
    "metadata": {},
    "source": [
     "##### Building together code to loop through links of different styles of beer (zooming out another level/ another loop)\n",
@@ -560,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "665f645a",
+   "id": "a7fc4002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e15ebb5",
+   "id": "e0d0565c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06920374",
+   "id": "2e3ceb91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92ec7fc9",
+   "id": "ee4e7619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c7a18d",
+   "id": "fcbc7363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d474a34",
+   "id": "82f17ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af19dab",
+   "id": "5bf47129",
    "metadata": {
     "scrolled": true
    },
@@ -904,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fccde82",
+   "id": "8e78f770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d079f1bd",
+   "id": "09c51eee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2305d669",
+   "id": "f8803fd8",
    "metadata": {},
    "outputs": [],
    "source": []
