data gathered, 5 different csv due to interuptions or time outs

--- a/notebooks/beer_adv_webscrape.ipynb
+++ b/notebooks/beer_adv_webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a51a71c2",
+   "id": "af497c28",
    "metadata": {},
    "source": [
     "#### Goal for this webscrape phase: \"go into\" a page with links to \"zoom in\"/loop through links that then take you to another level that will then loop through links to scrape each webpage with in\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fd3fd91a",
    "metadata": {},
    "outputs": [],
@@ -39,18 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "50129b5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # # url = \"https://www.beeradvocate.com/beer/profile/143/1352/\" # this was first test page scraped\n",
     "# # # url =\"https://www.beeradvocate.com/beer/profile/17033/53930/\" #this one does not have ratings\n",
@@ -157,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9385b149",
+   "id": "318fa988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b68df6b",
+   "id": "49101f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291deacd",
+   "id": "9c26c053",
    "metadata": {},
    "source": [
     "###### zooming out one level to scrape through \"bocks\" pg 1 with 50 results"
@@ -323,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe83595",
+   "id": "649ab3db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba37d1fc",
+   "id": "2553b90d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351a805c",
+   "id": "e6cfc9e6",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d855356e",
+   "id": "a482ac75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea18ce0",
+   "id": "8299b1e7",
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f24acadb",
+   "id": "e2a49927",
    "metadata": {
     "scrolled": true
    },
@@ -392,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8cf9999",
+   "id": "4a84af14",
    "metadata": {},
    "source": [
     "##### Building together code to loop through links on one page  "
@@ -401,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260cdf52",
+   "id": "8b34d2b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6260dc",
+   "id": "0be6f9b7",
    "metadata": {
     "scrolled": false
    },
@@ -526,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0063b98e",
+   "id": "3ae2cca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9efca6e4",
+   "id": "f8933e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01cb585",
+   "id": "a29b3868",
    "metadata": {
     "scrolled": true
    },
@@ -558,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7724ed4e",
+   "id": "4b79a92d",
    "metadata": {},
    "source": [
     "##### Building together code to loop through links of different styles of beer (zooming out another level/ another loop)\n",
@@ -568,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7fc4002",
+   "id": "e912b0ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d0565c",
+   "id": "4d8ed120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3ceb91",
+   "id": "0063f0f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee4e7619",
+   "id": "3b2e6b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcbc7363",
+   "id": "e955edc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f17ffb",
+   "id": "9d163b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf47129",
+   "id": "45689d99",
    "metadata": {
     "scrolled": true
    },
@@ -912,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e78f770",
+   "id": "c90c94c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,8 +914,8 @@
     "soup=cook_soup(website) #makes soup of previous url\n",
     "container=soup.find('div',{'id':'ba-content'}) #looks for place where href are\n",
     "style_href=[link['href'] for link in  container.find_all('a', href=True)][0:-1] #saves hrefs\n",
-    "# for h in style_href:\n",
-    "#     webber=cook_soup(f'{root}{h}')\n",
+    "for h in style_href:\n",
+    "    webber=cook_soup(f'{root}{h}')\n",
     "for x in range(0,100000,50):\n",
     "    web=f'{root}{h}?sort=revsD&start={x}'\n",
     "    soup=cook_soup(web)\n",
@@ -1030,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09c51eee",
+   "id": "8d855bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8803fd8",
+   "id": "918e83ae",
    "metadata": {},
    "outputs": [],
    "source": []
