--- a/notebooks/sov_beer_eda_2.ipynb
+++ b/notebooks/sov_beer_eda_2.ipynb
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b7525faa",
+   "id": "4248fa02",
    "metadata": {
     "scrolled": true
    },
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dcf284bb",
+   "id": "a5ac8e43",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "78f49a72",
+   "id": "50184b96",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5fd3013d",
+   "id": "49e7b8e5",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "577422e3",
+   "id": "57c4096d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4336b906",
+   "id": "0d45a7b2",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc67dae8",
+   "id": "1defdcf1",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f024dbb8",
+   "id": "c4a326ca",
    "metadata": {
     "scrolled": true
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f670cac",
+   "id": "f4783354",
    "metadata": {},
    "source": [
     "##### Starting to look into trends of how people review on this site:"
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49240a87",
+   "id": "cd2e55b4",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f96148a4",
+   "id": "a2b85181",
    "metadata": {
     "scrolled": false
    },
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d372a740",
+   "id": "64f63c48",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "693fd342",
+   "id": "ba1b2a9b",
    "metadata": {
     "scrolled": true
    },
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a0b56aa2",
+   "id": "9eac6fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e3bb9948",
+   "id": "d03e0585",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "51d0730f",
+   "id": "9b82badb",
    "metadata": {
     "scrolled": false
    },
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "25b782cf",
+   "id": "bca0092d",
    "metadata": {
     "scrolled": false
    },
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a8a1b45a",
+   "id": "63fd839e",
    "metadata": {
     "scrolled": false
    },
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3ab73cb8",
+   "id": "c0298dd1",
    "metadata": {
     "scrolled": false
    },
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3941491c",
+   "id": "fa99f587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "12db81fe",
+   "id": "2bae92d1",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "26b710b6",
+   "id": "8a53ca39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "988b7fc6",
+   "id": "dfcd447a",
    "metadata": {
     "scrolled": false
    },
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "533280c1",
+   "id": "f70724f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "802fc175",
+   "id": "691aa556",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a7a75a67",
+   "id": "2077b11a",
    "metadata": {
     "scrolled": false
    },
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6617962c",
+   "id": "4cba4893",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "38754010",
+   "id": "d4ef7cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3f711782",
+   "id": "bf04caed",
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f8e58aa6",
+   "id": "cea7c6fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "866f414f",
+   "id": "c118b45b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ab71e765",
+   "id": "c2e757f0",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "66ddbb95",
+   "id": "b5410e86",
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "36f54889",
+   "id": "72910c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "058358e7",
+   "id": "49751990",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fc6e8fa3",
+   "id": "bdfb7f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0ba9c0bf",
+   "id": "94ecf3ec",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1384a0b2",
+   "id": "715420b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f78a74fe",
+   "id": "76691062",
    "metadata": {
     "scrolled": false
    },
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "6f6243be",
+   "id": "62348772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "ea917c27",
+   "id": "386ab093",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4e384f5e",
+   "id": "353baa2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1cdbfb71",
+   "id": "9f83c9c1",
    "metadata": {
     "scrolled": false
    },
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "782a4f2b",
+   "id": "90a3f258",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "283d2aa9",
+   "id": "599643a0",
    "metadata": {},
    "source": [
     "##### Looking at time vs avg_rating:"
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "89b9c6b2",
+   "id": "3231d578",
    "metadata": {
     "scrolled": false
    },
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af1d7eb",
+   "id": "ebc6908e",
    "metadata": {},
    "source": [
     "#### Looking at ABV:"
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a23b5e68",
+   "id": "77cd95b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "2a1100c7",
+   "id": "0e3e2940",
    "metadata": {
     "scrolled": false
    },
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "7ec46eba",
+   "id": "3e720a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "36185f9d",
+   "id": "258f3c3a",
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5fda15",
+   "id": "d6b0c20c",
    "metadata": {},
    "source": [
     "##### Looking at location:"
@@ -2020,7 +2020,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "45933a0e",
+   "id": "55eabcb5",
    "metadata": {},
    "outputs": [
     {
@@ -2042,8 +2042,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "id": "9bbab432",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "brewery\n",
+       "Boston Beer Company (Samuel Adams)                 87\n",
+       "Tree House Brewing Company                         77\n",
+       "Anheuser-Busch                                     75\n",
+       "Short's Brewing Company                            62\n",
+       "Founders Brewing Company                           55\n",
+       "Mikkeller ApS                                      53\n",
+       "The Bruery                                         52\n",
+       "Jack's Abby Brewing                                51\n",
+       "Bell's Brewery - Eccentric Café & General Store    51\n",
+       "Hill Farmstead Brewery                             50\n",
+       "Allagash Brewing Company                           48\n",
+       "Sierra Nevada Brewing Co.                          44\n",
+       "Victory Brewing Company - Downingtown              43\n",
+       "Matt Brewing Company / Saranac Brewery             42\n",
+       "Tired Hands Brewing Company                        42\n",
+       "Dogfish Head Craft Brewery                         42\n",
+       "Rogue Ales                                         41\n",
+       "Revolution Brewing                                 40\n",
+       "Brouwerij 3 Fonteinen                              39\n",
+       "3 Floyds Brewing Co.                               39\n",
+       "Firestone Walker Brewing Co.                       38\n",
+       "Pabst Brewing Company                              38\n",
+       "Ballast Point Brewing Company                      38\n",
+       "Trillium Brewing Company                           37\n",
+       "Jester King Brewery                                37\n",
+       "The Schlafly Tap Room                              37\n",
+       "New Glarus Brewing Company                         37\n",
+       "Brasserie Cantillon                                36\n",
+       "Lagunitas Brewing Company                          35\n",
+       "Cigar City Brewing                                 35\n",
+       "Boulevard Brewing Co.                              34\n",
+       "Goose Island Beer Co.                              34\n",
+       "Southern Tier Brewing Company                      34\n",
+       "Prairie Artisan Ales                               32\n",
+       "The Lost Abbey                                     31\n",
+       "Great Lakes Brewing Co.                            31\n",
+       "Spoetzl Brewery                                    30\n",
+       "Evil Twin Brewing                                  30\n",
+       "Stone Brewing                                      30\n",
+       "Off Color Brewing                                  29\n",
+       "Brewery Ommegang                                   29\n",
+       "Russian River Brewing Company                      28\n",
+       "Jackie O's Brewpub                                 28\n",
+       "Pipeworks Brewing Company                          28\n",
+       "Avery Brewing Company                              28\n",
+       "Great Divide Brewing Company                       27\n",
+       "Flying Dog Brewery                                 27\n",
+       "Deschutes Brewery                                  27\n",
+       "Guinness Ltd.                                      26\n",
+       "Funky Buddha Brewery                               26\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beer['brewery'].value_counts().head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "9a9da699",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "brewery\n",
+       "Brauerei Brinkhoff GmbH                                1\n",
+       "Carillon Brewing Co.                                   1\n",
+       "Swan Brewery                                           1\n",
+       "Schlossbrauerei Maxlrain GmbH & Co. KG                 1\n",
+       "Distelhäuser Brauerei                                  1\n",
+       "Yellowhead Brewery                                     1\n",
+       "Denver ChopHouse & Brewery                             1\n",
+       "Seldom Beer Company                                    1\n",
+       "Whistle Punk Brewing Company                           1\n",
+       "Oakflower Brewing Company                              1\n",
+       "Omen Brewing                                           1\n",
+       "Duquesne Bottling Company                              1\n",
+       "Hap & Harry's Tennessee Beer / R. S. Lipman Company    1\n",
+       "Montucky Cold Snacks                                   1\n",
+       "Alloy Brewing Company                                  1\n",
+       "Model A Brewing Company                                1\n",
+       "Casa Do Fritz                                          1\n",
+       "Bard's Tale Beer Company                               1\n",
+       "Cervejarias Reunidas Skol-Caracu                       1\n",
+       "KEO Limited                                            1\n",
+       "Bintang                                                1\n",
+       "South African Breweries plc                            1\n",
+       "Cervecería De Barranquilla                             1\n",
+       "Bad Beat Brewing                                       1\n",
+       "Cosmos Brewery (Thai Beverage Plc.)                    1\n",
+       "Athenian Brewery                                       1\n",
+       "Banks (Barbados) Breweries Limited                     1\n",
+       "Companhia Cervejaria Brahma                            1\n",
+       "Grand Canyon Brewing Company                           1\n",
+       "Midtown Brewing Company                                1\n",
+       "Halfway Crooks Beer                                    1\n",
+       "Labatt Brew House                                      1\n",
+       "Nepenthe Brewing Co.                                   1\n",
+       "Slow Hand Beer Company                                 1\n",
+       "Freak Folk Bier                                        1\n",
+       "Farm Club                                              1\n",
+       "Brnovar                                                1\n",
+       "Landmade Brewing                                       1\n",
+       "Third Wheel Brewing                                    1\n",
+       "Cerveceria Patagonia Primitiva S.A.                    1\n",
+       "Paradox Brewery                                        1\n",
+       "Hop Dogma Brewing Co.                                  1\n",
+       "Hopsquad Brewing Co.                                   1\n",
+       "Georgetown Brewing Company                             1\n",
+       "Bube's Brewery                                         1\n",
+       "Potosi Brewing Company                                 1\n",
+       "Pivovar Starbrno, A.S.                                 1\n",
+       "Steam Whistle Brewery Biergärten and Taproom           1\n",
+       "New Paltz Brewing Company (Pfälzerbräu)                1\n",
+       "Mirage Beer Company                                    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beer['brewery'].value_counts().tail(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
-   "id": "9d98c576",
+   "id": "c2e87d23",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2211,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9ff9ed10",
+   "id": "3cea2ee1",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2274,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7c5c7f2a",
+   "id": "29a946ae",
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "61f15131",
+   "id": "3d6ee0c1",
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2393,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ecf44e1d",
+   "id": "ab777c3d",
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "11867a4b",
+   "id": "a42f96dd",
    "metadata": {},
    "outputs": [
     {
@@ -2398,7 +2544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e702ef36",
+   "id": "96eba931",
    "metadata": {},
    "source": [
     "#### Looking at pdev"
@@ -2407,7 +2553,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "ce8b727e",
+   "id": "52e25d61",
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ba2b97",
+   "id": "efb2ce45",
    "metadata": {},
    "outputs": [],
    "source": []
